[gd_scene load_steps=5 format=3 uid="uid://b3kntxpoeh3wp"]

[ext_resource type="Script" uid="uid://c7248vwtxnt47" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://csocfo8l5mpa4" path="res://sprites/Player.png" id="3_sugp2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(8, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(8, 124)

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")

[node name="Level" type="Node" parent="."]

[node name="PlayerWallLeft" type="StaticBody2D" parent="Level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/PlayerWallLeft"]
position = Vector2(0, 172)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="PlayerWallRight" type="StaticBody2D" parent="Level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/PlayerWallRight"]
position = Vector2(180, 172)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="AlienWallLeft" type="Area2D" parent="Level"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level/AlienWallLeft"]
position = Vector2(0, 94)
shape = SubResource("RectangleShape2D_sugp2")

[node name="AlienWallRight" type="Area2D" parent="Level"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level/AlienWallRight"]
position = Vector2(180, 96)
shape = SubResource("RectangleShape2D_sugp2")

[node name="UI" type="Node" parent="."]

[node name="Score" type="RichTextLabel" parent="UI"]
visible = false
texture_filter = 1
offset_left = 128.0
offset_right = 176.0
offset_bottom = 24.0
text = "0"
horizontal_alignment = 2

[node name="Lives" type="HBoxContainer" parent="UI"]
offset_left = 4.0
offset_top = 169.0
offset_right = 60.0
offset_bottom = 177.0
theme_override_constants/separation = 5

[node name="1" type="TextureRect" parent="UI/Lives"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_sugp2")

[node name="2" type="TextureRect" parent="UI/Lives"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_sugp2")

[node name="3" type="TextureRect" parent="UI/Lives"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_sugp2")

[node name="StartButton" type="Button" parent="UI"]
offset_left = 48.0
offset_top = 72.0
offset_right = 141.0
offset_bottom = 103.0
text = "New Game"

[node name="QuitButton" type="Button" parent="UI"]
offset_left = 48.0
offset_top = 112.0
offset_right = 141.0
offset_bottom = 143.0
text = "Quit"

[node name="GameOverText" type="RichTextLabel" parent="UI"]
visible = false
offset_left = 48.0
offset_top = 32.0
offset_right = 141.0
offset_bottom = 72.0
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MothershipSpawner" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="Level/AlienWallLeft" to="." method="_on_alien_wall_left_body_entered"]
[connection signal="body_entered" from="Level/AlienWallRight" to="." method="_on_alien_wall_right_body_entered"]
[connection signal="pressed" from="UI/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="MothershipSpawner" to="." method="_on_mothership_spawner_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
